--- a/www/source/scss/object/_footer.scss
+++ b/www/source/scss/object/_footer.scss
@@ -7,13 +7,12 @@
  */
  .footer{
    &__container{
-     width: 80%;
-     margin: auto;
+     width: 100%;
      display: flex;
-     justify-content: flex-start;
+     justify-content: space-between;
    }
-   &__information{
-     width:35%;
+   &__information, &__horaire, &__linkSection{
+      margin: auto;
    }
  }
 
